leptos_workers/tests/ui/item-is-not-a-function.stderr
error: worker name missing

         = help: try `#[worker(YourNameHere)]`

 --> tests/ui/item-is-not-a-function.rs:3:1
  |
3 | #[worker]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `worker` (in Nightly builds, run with -Z macro-backtrace for more info)
