leptos_workers/tests/ui/item-is-not-a-function.rs
use leptos_workers_macro::worker;

#[worker]
struct S;

fn main() {}
